--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,29 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
+.theme-light {
+  --card-txt-font-weight: 400;
+  --card-title-font-weight: 700;
+  --bg-color: #fff;
+  --accent-color: #000;
+  --background-image: url(../svg/pattern-light.svg);
+}
+
+@media (prefers-color-scheme: light) {
+  .page {
+    --card-txt-font-weight: 400;
+    --card-title-font-weight: 700;
+    --bg-color: #fff;
+    --accent-color: #000;
+    --background-image: url(../svg/pattern-light.svg);
+  }
+}
+
+.theme-dark {
+  --card-txt-font-weight: 465;
+  --card-title-font-weight: 785;
+  --bg-color: #000;
+  --accent-color: #00cc14;
+  --background-image: url(../svg/pattern-dark.svg);
+}
