--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,15 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+  --main-font: "Inter-Variable";
+  --accent-font: "PressStart2P-Regular";
+
+  --card-txt-font-weight: 465;
+  --card-title-font-weight: 785;
+  --bg-color: #000;
+  --accent-color: #00cc14;
+  --background-image: url(../svg/pattern-dark.svg);
+  --content-section-width: 48%;
+  /* heart icon variables */
+  --heart-icon-contour-color: var(--accent-color);
+  --heart-icon-red-color: #ff0000;
+}
