--- a/styles/style.css
+++ b/styles/style.css
@@ -19,15 +19,14 @@
   min-block-size: 100dvb;
   font-family: var(--main-font), Arial, Helvetica, sans-serif;
   font-variation-settings: "wght" var(--card-txt-font-weight);
-  /* background-color: var(--bg-color); */
-  /* background-image: var(--background-image); */
   background-image: var(--background-image);
-
+  background-attachment: fixed;
   background-size: cover;
 
   background-repeat: repeat;
   color: var(--accent-color);
   font-size: 18px;
+  line-height: 21px;
   padding: 100px 0;
 }
 
@@ -45,12 +44,11 @@
   border: 2px solid var(--accent-color);
 }
 
-.heading {
+.heading-link {
   font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
   margin-block-start: 2em;
   line-height: 120%;
-}
-.heading-link {
+  display: block;
   text-decoration: none;
 }
 .heading-description {
@@ -106,28 +104,7 @@
 }
 
 .theme-menu__button:focus-visible::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  margin-bottom: 4px;
-  display: block;
-  width: 100%;
-  height: 3px;
-  background-color: currentColor;
   transform: scaleX(1);
-  /* transition: transform 0.3s ease; */
-}
-
-/* arrow animation */
-
-@keyframes arrow {
-  0% {
-    translate: 0px;
-  }
-  100% {
-    translate: 4px;
-  }
 }
 
 .theme-menu__button:disabled::before {
@@ -144,7 +121,7 @@
   margin-inline-start: 19px;
 }
 .main {
-  margin-block-end: 50px;
+  /* margin-block-end: 50px; */
 }
 .card {
   background-color: var(--bg-color);
@@ -168,6 +145,7 @@
   position: relative;
 }
 .card-label {
+  z-index: 1;
   font-family: var(--accent-font), fantasy, sans-serif;
   font-size: 14px;
   position: absolute;
@@ -192,7 +170,8 @@
 }
 
 .card-image {
-  /* object-fit: cover; */
+  object-fit: cover;
+  object-position: center;
   width: 100%;
 }
 
@@ -250,7 +229,7 @@
   font-family: var(--accent-font), fantasy, sans-serif;
   font-size: 14px;
   cursor: pointer;
-  transition: box-shadow 0.3s ease, color 1s ease;
+  transition: box-shadow 0.3s ease;
   /* border: 1px solid red; */
   position: relative;
   overflow: hidden;
@@ -259,7 +238,7 @@
   outline: none;
 }
 .btn:focus-visible {
-  box-shadow: 2px 2px currentColor;
+  box-shadow: 2px 2px var(--accent-color);
 }
 
 .btn::after {
@@ -273,7 +252,6 @@
 }
 .btn:hover::after {
   transform: translate(0);
-  transition: transform 0.5s ease-in-out;
 }
 /* heart icon - button */
 .card__icon-button {
@@ -304,7 +282,7 @@
 /* heart core */
 .card__icon-button .like-icon .core {
   fill: transparent;
-  transition: fill 0.3s linear 0.06s;
+  transition: fill 0.3s linear 0.03s;
 }
 
 .card__icon-button:hover .like-icon .core {
@@ -370,13 +348,16 @@
 
 .card__like-button {
   cursor: pointer;
-  padding: 12px 37px 10px 34px;
+  width: 130px;
+  padding: 12px 0 10px;
   /* border: 1px solid red; */
 }
 .button__text {
+  display: block;
   position: relative;
   z-index: 1;
   mix-blend-mode: difference;
+  /* border: 1px solid red; */
 }
 .page-footer {
   margin: 50px 0 0;
@@ -395,17 +376,20 @@
   z-index: 1;
   mix-blend-mode: difference;
 }
-.save-memories-txt {
+/* .save-memories-txt {
   display: block;
   position: relative;
   z-index: 1;
   mix-blend-mode: difference;
-}
+} */
 .dialog-window {
   padding: 30px;
   font-family: var(--accent-font), fantasy, sans-serif;
   font-size: 14px;
   margin: auto;
+  background-color: var(--bg-color);
+  border: 2px solid var(--accent-color);
+  color: inherit;
 }
 .dialog-window::backdrop {
   background-color: rgb(0 0 0 / 0.75);
@@ -430,11 +414,6 @@
 .dialog-window-button {
   padding: 11px 0 8px;
   width: 293px;
-}
-.dialog-window-button-text {
-  mix-blend-mode: difference;
-  z-index: 1;
-  position: relative;
 }
 
 @media (width <= 375px) {
